--- a/src/main/webapp/css/Loucademia_Estilo.css
+++ b/src/main/webapp/css/Loucademia_Estilo.css
@@ -53,7 +53,8 @@ div#infoMessage
 	background-color: #ffcc00;
 	width: 400px;
 	border-radius: 5px;
-	padding: 10px;
+	padding: 20px;
+	margin-bottom: 2%;
 	color: #d40000;
 }
 
