--- a/src/main/webapp/css/Loucademia_Estilo.css
+++ b/src/main/webapp/css/Loucademia_Estilo.css
@@ -5,7 +5,7 @@
 
 body
 {
-	background-color: #8d02ae;
+	background-color: rgb(0, 128, 192);
 	text-align: center;
 }
 
@@ -25,7 +25,7 @@ nav a:hover
 
 h1
 {
-	color: #8bbf18;
+	color: rgb(0, 0, 160);
 	background-color: #ffffff;
 	text-transform: uppercase;
 	font-style: italic;
@@ -80,13 +80,13 @@ legend
 legend,
 label
 {
-	color: #8d02ae;
+	color: rgb(0, 0, 128)128, 255);
 }
 
 input,
 select
 {
-	border: 1px solid #8d02ae;
+	border: 1px solid rgb(0, 128, 255);
 	margin-bottom: 7px;
 }
 
